Fix for reading content-type header before using default plugin bug 54437 a=av sr=buster